<resources>
    <string name="app_name">Marvel</string>
    <string name="place_holder_text">Place Holder Text</string>
    <string name="action_settings">Settings</string>
    <string name="success_message">Data Fetched Successfully</string>
    <string name="failure_message">Failure In Fetching Data. Please Check Internet Connection</string>
    <string name="ok_string">OK</string>
    <string name="not_found">Not Found</string>
    <string name="placeholder_name">Name</string>
    <string name="placeholder_title">Title</string>
    <string name="key_title">title</string>
    <string name="key_name">name</string>
    <string name="key_resID">resID</string>
    <string name="failed_to_load_image_message">Image Failed To Load</string>
    <string name="string_description">Description</string>
    <string name="string_pageCount">Page Count</string>
    <string name="string_price">Price</string>
    <string name="string_author">Author</string>
    <string name="string_dollar">$ </string>
    <string name="string_end_budget_mode">End Budget Mode</string>
    <string name="string_no_data_found_on_server">No Data On Server</string>
</resources>