...
                    android:layout_width="@dimen/comic_detail_image_view_dimen"
                    android:layout_height="@dimen/comic_detail_image_view_dimen"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_language" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/imageview_icon_title"
                    android:layout_marginLeft="@dimen/margin_left_detail_title_text_view"
                    android:layout_marginStart="@dimen/margin_left_detail_title_text_view"
                    android:layout_toEndOf="@+id/imageview_icon_title"
...
